--- a/popup.html
+++ b/popup.html
@@ -8,12 +8,17 @@
 </head>
 <body>
 
-<div style="width: 300px">
-    <h1 class="titleText">Avans Schedule Cleaner</h1>
+<div class="mainDiv">
+    <h1 class="textWhite fontItalic">Avans Schedule Cleaner</h1>
     <hr/>
-    <button type="button">Save</button>
+    <p class="textWhite">Fill in the abbreviation of the subject. For example: PROG6</p>
+
+
+    <form>
+        <input type="text"/>
+        <button type="submit">Save</button>
+    </form>
+
 </div>
-
-
 </body>
 </html>
