--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="popup.js"></script>
 </head>
 <body>
 
@@ -13,12 +12,10 @@
     <hr/>
     <p class="textWhite">Fill in the abbreviation of the subject. For example: PROG6</p>
 
-
-    <form>
-        <input type="text"/>
-        <button type="submit">Save</button>
-    </form>
+    <button id="submitBtn" type="button">Save</button>
 
 </div>
+
+<script src="popup.js"></script>
 </body>
 </html>
