Submit subject from popup to object

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,11 @@
     <hr/>
     <p class="textWhite">Fill in the abbreviation of the subject. For example: PROG6</p>
 
-    <button id="submitBtn" type="button">Save</button>
+    <form>
+        <input type="text" id="firstSubject"></br>
+        <input type="submit" id="submitBtn">
+    </form>
+
 
 </div>
 
