--- a/popup.html
+++ b/popup.html
@@ -8,13 +8,14 @@
 <body>
 
 <div class="mainDiv">
-    <h1 class="textWhite fontItalic">Avans Schedule Cleaner</h1>
+    <h1 class="fontItalic titleText">Schedule Cleaner For Avans™</h1>
     <hr/>
-    <p class="textWhite">Fill in the abbreviation of the subject. For example: PROG6</p>
+    <p class="explanationText">Fill in the abbreviation of a subject you would like to remove from the schedule. For example: PROG6 or WEBS5</p>
     <form>
-        <input type="text" id="firstSubject"></br>
-        <input type="submit" id="submitBtn">
+        <input type="text" id="firstSubject" placeholder="Insert a subject"></br>
+        <input type="submit" id="submitBtn" value="Add">
     </form>
+    <p id="disclaimerText">Made by JeromeNL - Student Informatica Avans</p>
 </div>
 
 <script src="popup.js"></script>
