--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
     <p class="explanationText">Fill in the abbreviation of a subject you would like to remove from the schedule. For example: PROG6 or WEBS5</p>
     <form>
         <input type="text" id="firstSubject" placeholder="Insert a subject"></br>
+        <input type="submit" id="clearBtn" class="horizontalButtons" value="Clear all">
         <input type="submit" id="submitBtn" value="Add">
     </form>
     <p id="disclaimerText">Made by JeromeNL - Student Informatica Avans</p>
