Console.logs removed and cleanup

--- a/popup.html
+++ b/popup.html
@@ -10,9 +10,9 @@
 <div class="mainDiv">
     <h1 class="fontItalic titleText">Schedule Cleaner For Avans™</h1>
     <hr/>
-    <p class="explanationText">Fill in the abbreviation of a subject you would like to remove from the schedule. For example: PROG6 or WEBS5</p>
+    <p class="explanationText">Fill in the abbreviation of a subject you would like to remove from the schedule. For example: PROG6 or WEBS5. Remove all your filtered subjects by clicking the clear button</p>
     <form>
-        <input type="text" id="firstSubject" placeholder="Insert a subject"></br>
+        <input type="text" id="firstSubject" placeholder="Insert a subject">
         <input type="submit" id="clearBtn" class="horizontalButtons" value="Clear all">
         <input type="submit" id="submitBtn" value="Add">
     </form>
