--- a/popup.html
+++ b/popup.html
@@ -10,13 +10,15 @@
 <div class="mainDiv">
     <h1 class="fontItalic titleText">Schedule Cleaner For Avans™</h1>
     <hr/>
-    <p class="explanationText">Fill in the abbreviation of a subject you would like to remove from the schedule. For example: PROG6 or WEBS5. Remove all your filtered subjects by clicking the clear button</p>
+    <p class="explanationText">Fill in the abbreviation of a subject you would like to remove from the schedule. For example: PROG6 or WEBS5 and <b>reload</b> the page. Reset all your filtered subjects by clicking the clear button</p>
     <form>
         <input type="text" id="firstSubject" placeholder="Insert a subject">
         <input type="submit" id="clearBtn" class="horizontalButtons" value="Clear all">
         <input type="submit" id="submitBtn" value="Add">
     </form>
-    <p id="disclaimerText">Made by JeromeNL - Student Informatica Avans</p>
+    <div id="disclaimerText">
+        <a href="https://github.com/JeromeNL">Made by JeromeNL - Student Informatica Avans</a>
+    </div>
 </div>
 
 <script src="popup.js"></script>
